expo go enabled

--- a/.gitignore
+++ b/.gitignore
@@ -52,6 +52,8 @@ android/
 HACKATHON_SUBMISSION_CHECKLIST.md
 GITHUB_SETUP.md
 GEMINI_SUBMISSION_CHECKLIST.md
+JUDGE_TESTING_GUIDE.md
+QUICK_EXPO_PUBLISH.md
 MVP_QUALITY_COMPENSATION.md
 COMPLETION_CHECKLIST.md
 QUICK_DEPLOY.md
